<resources>
    <string name="app_name">Pokemon</string>
    <string name="nama_app">Pokemon</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pokemon</string>
    <string name="pokemon_hint">Nama Pokemon</string>
    <string name="hp_hint">HP Pokemon</string>
    <string name="atk_hint">ATK Pokemon</string>
    <string name="tombol_submit">Submit</string>
    <string name="tombol_tambah">Tambah Data</string>
    <string name="tombol_lihat">Lihat Data</string>
    <string name="tombol_edit">Save</string>
    <string name="tombol_cancel">Cancel</string>
    <string name="tombol_dialog_edit">Edit</string>
    <string name="tombol_dialog_delete">Delete</string>
    <string name="title_view">Data Pokemon</string>
    <string name="title_edit">Edit Pokemon | ID : </string>
</resources>
